--- a/form.html
+++ b/form.html
@@ -51,7 +51,12 @@
 <textarea name="message" placeholder="Your message" rows="4" cols="50"></textarea>
 <br></br>
 
-<button onclick="=''">Boka</button>
+<script>
+function myFunction() {
+  confirm("Din bokning är nu genomförd och en bekräftelse skickas till din mail.");
+}
+
+</script>
 
 </body>
 </html>
