--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 överraskad och förförd.</p>
 
             <a href="#meny.html"><button class="button buttonMeny">Meny</button></a>
-            <a href="#bokabord.html"><button class="button buttonBoka">Boka bord</button></a>
+            <a href="form.html"><button class="button buttonBoka">Boka bord</button></a>
         </article>
 
         <footer class=flex-container3>
