--- a/Meny.html
+++ b/Meny.html
@@ -5,13 +5,13 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>YUC! Meny</title>
-   
+  
 <link href="Meny.css" rel="stylesheet">
 
 </head>
-
 <body>
-    <img src="Meny.svg"
+
+    <img src="Meny.svg">
 </body>
  
 
